--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "MIT",
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
+    "@types/babel__core": "^7.20.0",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
