--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   "author": "Michel YAM",
   "license": "MIT",
   "devDependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
     "@testing-library/react": "^13.4.0",
     "@types/babel__core": "^7.20.0",
     "@types/jest": "^29.4.0",
@@ -48,6 +52,7 @@
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.4.1",
     "prettier": "^2.8.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^29.0.5",
