--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
+        "target": "es6",
     }
 }
