--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
+    "build": "webpack --mode production",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
@@ -59,6 +59,7 @@
     "react-dom": "^18.2.0",
     "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
@@ -67,6 +68,9 @@
   "dependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "mini-css-extract-plugin": "^2.7.2",
+    "ts-node": "^10.9.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
