--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
   "dependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
+    "copy-webpack-plugin": "^11.0.0",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "mini-css-extract-plugin": "^2.7.2",
+    "style-loader": "^3.3.1",
     "ts-node": "^10.9.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
