--- a/example/package.json
+++ b/example/package.json
@@ -16,5 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "my-react-datapickerzadzadaz": "^0.0.4"
   }
 }
