--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.8",
   "description": "",
   "main": "./dist/Datapicker.ts",
-  "module": "./dist/esm/index.d.ts",
-  "types": "./dist/esm/index.d.ts",
+  "module": "./dist/esm/Datapicker.d.ts",
+  "types": "./dist/esm/Datapicker.d.ts",
   "files": [
     "dist",
     "LICENSE",
