--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-datapicker",
+  "name": "my-react-datapickerzadzadaz",
   "version": "0.0.3",
   "description": "",
   "main": "./dist/Datapicker.ts",
