--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "my-react-datapickerzadzadaz",
   "version": "0.0.15",
   "description": "",
-  "main": "./dist/Datapicker.ts",
-  "module": "./dist/Datapicker.ts",
-  "types": "./dist/Datapicker.ts",
+  "main": "dist/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "files": [
     "dist",
     "LICENSE",
