--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "my-react-datapickerzadzadaz": "^0.0.16"
+    "my-react-datapicker": "^0.0.14",
+    "my-react-datapickerzadzadaz": "^0.0.17"
   }
 }
