--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
     "test": "jest --config jestconfig.json",
-    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css dist/cjs dist/esm",
+    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css dist/",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run prettier"
   },
